// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VotesHeader > should render a different title if on select validator step 1`] = `
<DocumentFragment>
  <section
    class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex w-full items-center justify-between px-6 py-3 md:h-13 dark:bg-black"
  >
    <div
      class="flex items-center gap-2"
    >
      <h1
        class="mb-0 text-lg leading-[21px] font-semibold"
      >
        Select Validator
      </h1>
    </div>
  </section>
</DocumentFragment>
`;

exports[`VotesHeader > should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8"
  >
    <div
      class="mx-auto px-6 md:px-10 lg:container"
    >
      <div
        class="bg-theme-background flex items-end justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="mb-1 flex items-center gap-3"
          >
            <div
              class="hidden sm:inline"
            >
              <div
                data-testid="icon-VotesLight"
              >
                <div
                  style="height: 55px; width: 54px;"
                >
                  <svg
                    fill="none"
                    height="55"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 54 55"
                    width="54"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M35 47.5H4.2C2.98497 47.5 2 46.515 2 45.3V45.3C2 40.4399 5.93989 36.5 10.8 36.5H11"
                      stroke="#5CA4EC"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M47.4929 15.5078L30.164 5.50297C28.2541 4.4003 25.8121 5.05147 24.7048 6.95868L23.0933 9.73437C25.1813 9.73438 29.5933 9.72656 33.5933 9.72656C38.5933 9.72656 40.0933 11.2356 40.0933 14.7266L40.0933 36.3244L48.957 20.9719C50.0616 19.0588 49.4061 16.6124 47.4929 15.5078Z"
                      fill="#5CA4EC"
                      stroke="#5CA4EC"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M20 10.0937L36 10.0937C38.2091 10.0937 40 11.8846 40 14.0938L40 36.5M20 10.0937L12 18.0937M20 10.0937L20 16.0937C20 17.1983 19.1046 18.0937 18 18.0937L12 18.0937M12 40.0937L12 18.0937M12 40.0937L8.00001 40.0937M12 40.0937L36.5 40.0937"
                      stroke="#235B95"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M27.8281 34.267L25.051 29.6386C24.7917 29.2065 24.7439 28.6796 24.921 28.2078L29.0941 17.0938C29.2406 16.7037 29.6136 16.4453 30.0303 16.4453H33.5482C34.2494 16.4453 34.7329 17.1483 34.482 17.8031L28.1863 34.2357C28.1267 34.3914 27.9139 34.41 27.8281 34.267Z"
                      fill="#235B95"
                    />
                    <path
                      d="M21.0984 24H17.817C17.0289 24 16.5505 24.8692 16.9722 25.5351L22.4322 34.1562C22.6156 34.4457 22.9344 34.6211 23.2771 34.6211H26.2711C27.0484 34.6211 27.5285 33.7731 27.1286 33.1066L21.9559 24.4855C21.7752 24.1843 21.4497 24 21.0984 24Z"
                      stroke="#235B95"
                      stroke-width="2"
                    />
                    <path
                      d="M35 47.5V45.5C35 40.5294 39.0294 36.5 44 36.5V36.5C48.9706 36.5 53 40.5294 53 45.5V45.6667C53 46.6792 52.1792 47.5 51.1667 47.5H47.5"
                      stroke="#5CA4EC"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <h1
                class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
                data-testid="header__title"
              >
                Votes
              </h1>
               
              <div
                class="text-theme-secondary-text mt-0.5 flex items-center text-xs leading-5 font-semibold sm:mt-1 sm:text-sm sm:leading-[17px] sm:font-normal md:text-base md:leading-5"
                data-testid="header__subtitle"
              >
                Manage your cryptoasset staking.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesHeader > should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex w-full items-center justify-between px-6 py-3 md:h-13 dark:bg-black"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="inline"
      >
        <div
          data-testid="icon-MobileVotesLight"
        >
          <div
            style="height: 24px; width: 24px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 25 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.0626 8.00365L12.8206 2.66773C11.8019 2.07964 10.4995 2.42693 9.90896 3.44411L9.04948 4.92448C10.1631 4.92448 13.5161 4.92031 15.6495 4.92031C17.4668 4.92004 18.1168 5.72876 18.1161 6.58698L18.1161 19.1058L22.8435 10.9178C23.4326 9.89748 23.083 8.59276 22.0626 8.00365Z"
                fill="#2C4478"
                stroke="#2C4478"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M7.39974 5.11719L17.0664 5.11719C17.6187 5.11719 18.0664 5.5649 18.0664 6.11719L18.0664 19.2005M7.39974 5.11719L3.13307 9.38385M7.39974 5.11719L7.39974 8.38385C7.39974 8.93614 6.95202 9.38385 6.39974 9.38385L3.13307 9.38385M3.13307 21.1172L3.13307 9.38385M3.13307 21.1172L0.999743 21.1172M3.13307 21.1172L16.1997 21.1172"
                stroke="#9EB3DB"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M13.1379 18.0975L10.3228 15.5814C10.0517 15.3391 9.95727 14.9551 10.0851 14.6147L12.2482 8.85367C12.3264 8.64562 12.5253 8.50781 12.7475 8.50781H16.1913C16.5653 8.50781 16.8232 8.88272 16.6894 9.23195L13.3086 18.0561C13.2819 18.1259 13.1936 18.1472 13.1379 18.0975Z"
                fill="#9EB3DB"
              />
              <path
                d="M9.03196 12.5312H6.08328C5.72863 12.5312 5.51336 12.9224 5.70312 13.222L8.72069 17.9866C8.8032 18.1169 8.94666 18.1958 9.10086 18.1958H11.8907C12.2405 18.1958 12.4565 17.8143 12.2766 17.5143L9.41783 12.7497C9.3365 12.6142 9.19003 12.5312 9.03196 12.5312Z"
                stroke="#9EB3DB"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
      <h1
        class="mb-0 text-lg leading-[21px] font-semibold"
      >
        Votes
      </h1>
    </div>
  </section>
</DocumentFragment>
`;
